small fixes and change to web queries size cutoffs, need smaller size for small phones

--- a/src/style/burger.scss
+++ b/src/style/burger.scss
@@ -1,7 +1,7 @@
 @use "variables.scss";
 
 header{
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 700px) {
         nav{
             display: none;
         }
@@ -54,7 +54,6 @@ header{
                 text-align: center;
                 li{
                     padding: 1rem;
-                    border: 0.2rem solid variables.$darkblue;
                 }
             }
         }
@@ -66,7 +65,7 @@ header{
             right: 0;
         }
     }
-    @media screen and (min-width: 500px) {
+    @media screen and (min-width: 700px) {
         .burgerToggle{
             display: none;
         }
