--- a/src/style/index.css
+++ b/src/style/index.css
@@ -29,7 +29,13 @@ body ul {
 header {
   color: #151730;
 }
-@media screen and (max-width: 500px) {
+header nav {
+  background-color: #f2f2f2;
+}
+header nav li {
+  border: 0.2rem solid #151730;
+}
+@media screen and (max-width: 700px) {
   header {
     font-size: 1.5rem;
   }
@@ -39,17 +45,16 @@ header {
     display: block;
   }
 }
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 700px) {
   header {
+    font-size: 3rem;
     display: flex;
   }
   header img {
     height: 10rem;
   }
-  header nav {
-    background-color: #f2f2f2;
-  }
   header nav ul {
+    text-align: center;
     display: flex;
   }
 }
@@ -58,7 +63,7 @@ footer {
   display: grid;
   justify-items: center;
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 700px) {
   footer {
     font-size: 1.5rem;
   }
@@ -71,6 +76,14 @@ footer {
     background-color: #f2f2f2;
     border-radius: 100px;
     margin-bottom: 1rem;
+  }
+}
+@media screen and (min-width: 700px) {
+  footer {
+    font-size: 3rem;
+  }
+  footer .logoAmple {
+    height: 15rem;
   }
 }
 footer address {
@@ -92,7 +105,7 @@ footer address ul li .icons {
 footer section ul {
   display: flex;
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 700px) {
   footer section ul img {
     height: 7rem;
     padding: 1rem;
@@ -108,7 +121,7 @@ main h1, main h3 {
 main h1 {
   text-decoration: underline #ef4f0b 0.6rem;
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 700px) {
   main {
     font-size: 1.5rem;
   }
@@ -118,6 +131,19 @@ main h1 {
   }
   main h3 {
     font-size: 2.5rem;
+    font-weight: 500;
+  }
+}
+@media screen and (min-width: 700px) {
+  main {
+    font-size: 3rem;
+  }
+  main h1 {
+    font-size: 8rem;
+    font-weight: 700;
+  }
+  main h3 {
+    font-size: 7rem;
     font-weight: 500;
   }
 }
@@ -145,7 +171,7 @@ main .modelsBlurb ul {
   justify-content: center;
   gap: 1rem;
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 700px) {
   main .modelsBlurb ul {
     grid-template-columns: 45% 45%;
   }
@@ -175,12 +201,42 @@ main .modelsBlurb ul {
     margin-top: 30rem;
   }
 }
+@media screen and (min-width: 700px) {
+  main .modelsBlurb ul {
+    grid-template-columns: 30% 30% 30%;
+  }
+  main .modelsBlurb ul li {
+    position: relative;
+  }
+  main .modelsBlurb ul li .background {
+    background-color: #f2f2f2;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 20rem;
+    height: 20rem;
+    border-radius: 50%;
+    z-index: -5;
+  }
+  main .modelsBlurb ul li img {
+    display: block;
+    height: 35rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  main .modelsBlurb ul li h3 {
+    margin-top: 30rem;
+  }
+}
 
 footer {
   background-color: #151730;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 700px) {
   header nav {
     display: none;
   }
@@ -235,7 +291,6 @@ footer {
   }
   header .burgerMenu.open nav li {
     padding: 1rem;
-    border: 0.2rem solid #151730;
   }
   header .burgerMenu {
     z-index: 15;
@@ -245,7 +300,7 @@ footer {
     right: 0;
   }
 }
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 700px) {
   header .burgerToggle {
     display: none;
   }
